<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>

    <!-- popup menu-->
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_add_book">Add a Book</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About this App</string>
    <string name="title_capture">Capture</string>

    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>

    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13</string>
    <string name="book_cover">Book cover</string>

    <string name="by_authors">by %1$s</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>

    <string name="no_books">No books saved</string>
    <string name="not_found">No Books found</string>
    <string name="net_work_error">Network unavailable</string>

    <string name="pref_startScreen">Select Startscreen</string>
    <string name="show_expand">Expanded for supporting text</string>

    <string name="action_share">Share</string>
    <string name="share_text">A must read book: %1$s</string>
    <string name="need_isbn">"Need to be an ISBN-13"</string>
    <string name="delete_button_desc">Delete this book form the list</string>
    <string name="save_button_desc">Save this book to my list</string>

    <!--for dev tools-->
    <string name="tools_by_authors" translatable="false">by Some Smith</string>
    <string name="tools_book_title" translatable="false">Responsive Android Design</string>
    <string name="tools_categories" translatable="false">Cascading Android layout</string>
    <string name="tools_book_sub_title" translatable="false">This sub title has two lines of text it is tooooooooooo long sub title</string>

    <!-- barcode scan -->
    <string name="button_ok">Okay</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="share_button_desc">Share the title of this book</string>


</resources>