<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="8dp" card:cardElevation="2dp" card:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/the_book" />

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:padding="8dp" android:orientation="horizontal">

            <Button android:id="@+id/share_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:padding="0dp" android:textColor="@color/accent"
                android:contentDescription="@string/share_button_desc"
                android:text="@string/action_share" style="?android:attr/borderlessButtonStyle" />

            <Button android:id="@+id/delete_button" android:minHeight="36dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/delete_button" android:textColor="@color/secondary_text"
                android:contentDescription="@string/delete_button_desc"
                style="?android:attr/borderlessButtonStyle" />

            <LinearLayout
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:gravity="right">

                <ImageButton android:id="@+id/show_desc"
                    android:layout_width="40dp" android:layout_height="40dp"
                    android:layout_gravity="center|end" android:src="@drawable/ic_expand_less_black_24dp"
                    android:contentDescription="@string/show_expand"
                    style="?android:attr/borderlessButtonStyle" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout android:id="@+id/book_description"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:padding="16dp" android:visibility="gone" tools:visibility="visible">

            <TextView android:id="@+id/full_book_description"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:ellipsize="end" tools:text="@string/about_text" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>