<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="16dp" android:visibility="gone"
    android:id="@+id/book_card" tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/the_book" />

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="50dp"
            android:orientation="horizontal">

            <Button android:id="@+id/delete_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/delete_button" android:textColor="@color/secondary_text"
                android:contentDescription="@string/delete_button_desc"
                tools:visibility="visible" style="?android:attr/borderlessButtonStyle"  />

            <Button android:id="@+id/save_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/save_button" android:textColor="@color/accent"
                android:contentDescription="@string/save_button_desc"
                tools:visibility="visible" style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>